--- a/package.json
+++ b/package.json
@@ -1,12 +1,62 @@
 {
-  "name": "w3npay",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+	"name": "w3npay",
+	"version": "1.0.0",
+	"description": "Web3 Venmo",
+	"main": "index.js",
+	"scripts": {
+		"start": "craco start",
+		"build": "craco build",
+		"test": "craco test",
+		"eject": "react-scripts eject"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@craco/craco": "^6.4.5",
+		"@headlessui/react": "^1.7.4",
+		"@tailwindcss/postcss7-compat": "^2.2.17",
+		"@web3-onboard/coinbase": "^2.1.3",
+		"@web3-onboard/core": "^2.10.0",
+		"@web3-onboard/injected-wallets": "^2.3.0",
+		"@web3-onboard/walletconnect": "^2.1.3",
+		"@xmtp/xmtp-js": "^7.0.1",
+		"autoprefixer": "^9.8.8",
+		"axios": "^1.1.3",
+		"ethers": "^5.7.2",
+		"postcss": "^7.0.39",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-icons": "^4.6.0",
+		"react-redux": "^8.0.4",
+		"react-router-dom": "^6.4.3",
+		"react-scripts": "4.0.2",
+		"redux": "^4.2.0",
+		"redux-thunk": "^2.4.2",
+		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"assert": "^2.0.0",
+		"buffer": "^6.0.3",
+		"crypto-browserify": "^3.12.0",
+		"https-browserify": "^1.0.0",
+		"os-browserify": "^0.3.0",
+		"process": "^0.11.10",
+		"react-app-rewired": "^2.2.1",
+		"stream-browserify": "^3.0.0",
+		"stream-http": "^3.2.0",
+		"url": "^0.11.0"
+	}
 }
