fixed react-scripts issu

--- a/package.json
+++ b/package.json
@@ -37,16 +37,18 @@
 	},
 	"browserslist": {
 		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
+		  "chrome >= 67",
+		  "edge >= 79",
+		  "firefox >= 68",
+		  "opera >= 54",
+		  "safari >= 14"
 		],
 		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
+		  "last 1 chrome version",
+		  "last 1 firefox version",
+		  "last 1 safari version"
 		]
-	},
+	  },
 	"devDependencies": {
 		"assert": "^2.0.0",
 		"buffer": "^6.0.3",
